src/aofDot/AspectParser/AODotParser.java
// $ANTLR 3.5 src/aofDot/AspectParser/AODot.g 2014-01-09 23:32:10

package aofDot.AspectParser;

import aof.*;
import aofDot.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class AODotParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "DIGIT", "LETTER", "NAME", "WS", 
		"'('", "')'", "','", "'--'", "'->'", "'..'", "'..graph'", "':'", "';'", 
		"'='", "'Edge'", "'Graph'", "'Node'", "'['", "']'", "'advice'", "'delete'", 
		"'digraph'", "'graph'", "'insert'", "'order'", "'pointcut'", "'subgraph'", 
		"'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__8=8;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int DIGIT=4;
	public static final int LETTER=5;
	public static final int NAME=6;
	public static final int WS=7;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public AODotParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public AODotParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return AODotParser.tokenNames; }
	@Override public String getGrammarFileName() { return "src/aofDot/AspectParser/AODot.g"; }


	static int counter = 0;



	// $ANTLR start "file"
	// src/aofDot/AspectParser/AODot.g:22:1: file : ( WS | order | pointcut | advice )* EOF ;
	public final void file() throws RecognitionException {
		try {
			// src/aofDot/AspectParser/AODot.g:22:5: ( ( WS | order | pointcut | advice )* EOF )
			// src/aofDot/AspectParser/AODot.g:22:7: ( WS | order | pointcut | advice )* EOF
			{
			// src/aofDot/AspectParser/AODot.g:22:7: ( WS | order | pointcut | advice )*
			loop1:
			while (true) {
				int alt1=5;
				switch ( input.LA(1) ) {
				case WS:
					{
					alt1=1;
					}
					break;
				case 28:
					{
					alt1=2;
					}
					break;
				case 29:
					{
					alt1=3;
					}
					break;
				case 23:
				case 24:
				case 27:
					{
					alt1=4;
					}
					break;
				}
				switch (alt1) {
				case 1 :
					// src/aofDot/AspectParser/AODot.g:22:8: WS
					{
					match(input,WS,FOLLOW_WS_in_file51); 
					}
					break;
				case 2 :
					// src/aofDot/AspectParser/AODot.g:22:13: order
					{
					pushFollow(FOLLOW_order_in_file55);
					order();
					state._fsp--;

					}
					break;
				case 3 :
					// src/aofDot/AspectParser/AODot.g:22:21: pointcut
					{
					pushFollow(FOLLOW_pointcut_in_file59);
					pointcut();
					state._fsp--;

					}
					break;
				case 4 :
					// src/aofDot/AspectParser/AODot.g:22:32: advice
					{
					pushFollow(FOLLOW_advice_in_file63);
					advice();
					state._fsp--;

					}
					break;

				default :
					break loop1;
				}
			}

			match(input,EOF,FOLLOW_EOF_in_file67); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "file"



	// $ANTLR start "order"
	// src/aofDot/AspectParser/AODot.g:25:1: order : 'order' ( WS )? '{' ( WS )? aname= NAME ( ( WS )? ';' ( WS )? aname= NAME )* ( WS )? '}' ;
	public final void order() throws RecognitionException {
		Token aname=null;

		try {
			// src/aofDot/AspectParser/AODot.g:26:3: ( 'order' ( WS )? '{' ( WS )? aname= NAME ( ( WS )? ';' ( WS )? aname= NAME )* ( WS )? '}' )
			// src/aofDot/AspectParser/AODot.g:26:5: 'order' ( WS )? '{' ( WS )? aname= NAME ( ( WS )? ';' ( WS )? aname= NAME )* ( WS )? '}'
			{

			      String pred = new String();
			      String post = new String(); 
			    
			match(input,28,FOLLOW_28_in_order84); 
			// src/aofDot/AspectParser/AODot.g:30:13: ( WS )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==WS) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// src/aofDot/AspectParser/AODot.g:30:13: WS
					{
					match(input,WS,FOLLOW_WS_in_order86); 
					}
					break;

			}

			match(input,31,FOLLOW_31_in_order89); 
			// src/aofDot/AspectParser/AODot.g:30:21: ( WS )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==WS) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// src/aofDot/AspectParser/AODot.g:30:21: WS
					{
					match(input,WS,FOLLOW_WS_in_order91); 
					}
					break;

			}

			aname=(Token)match(input,NAME,FOLLOW_NAME_in_order98); 

			      assert (aname != null);  
			      pred = "_" + aname.getText();
			    
			// src/aofDot/AspectParser/AODot.g:35:5: ( ( WS )? ';' ( WS )? aname= NAME )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==WS) ) {
					int LA6_1 = input.LA(2);
					if ( (LA6_1==16) ) {
						alt6=1;
					}

				}
				else if ( (LA6_0==16) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// src/aofDot/AspectParser/AODot.g:35:6: ( WS )? ';' ( WS )? aname= NAME
					{
					// src/aofDot/AspectParser/AODot.g:35:6: ( WS )?
					int alt4=2;
					int LA4_0 = input.LA(1);
					if ( (LA4_0==WS) ) {
						alt4=1;
					}
					switch (alt4) {
						case 1 :
							// src/aofDot/AspectParser/AODot.g:35:6: WS
							{
							match(input,WS,FOLLOW_WS_in_order111); 
							}
							break;

					}

					match(input,16,FOLLOW_16_in_order114); 
					// src/aofDot/AspectParser/AODot.g:35:14: ( WS )?
					int alt5=2;
					int LA5_0 = input.LA(1);
					if ( (LA5_0==WS) ) {
						alt5=1;
					}
					switch (alt5) {
						case 1 :
							// src/aofDot/AspectParser/AODot.g:35:14: WS
							{
							match(input,WS,FOLLOW_WS_in_order116); 
							}
							break;

					}

					aname=(Token)match(input,NAME,FOLLOW_NAME_in_order123); 

					      assert (aname != null);  
					      post = "_" + aname.getText();
					      Weaver.addOrder(pred, post);
					      pred = post;
					    
					}
					break;

				default :
					break loop6;
				}
			}

			// src/aofDot/AspectParser/AODot.g:42:8: ( WS )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==WS) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					// src/aofDot/AspectParser/AODot.g:42:8: WS
					{
					match(input,WS,FOLLOW_WS_in_order138); 
					}
					break;

			}

			match(input,32,FOLLOW_32_in_order141); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "order"



	// $ANTLR start "advice"
	// src/aofDot/AspectParser/AODot.g:44:1: advice : ( 'advice' WS aname= NAME ( WS )? ':' ( WS )? )? ( ( 'insert' ) | ( 'delete' ) ) WS pname= NAME ( WS )? '(' args ')' ( WS )? '{' rules '}' ;
	public final void advice() throws RecognitionException {
		Token aname=null;
		Token pname=null;
		ArrayList<Argument> args1 =null;
		ArrayList<PointcutRule> rules2 =null;

		try {
			// src/aofDot/AspectParser/AODot.g:45:3: ( ( 'advice' WS aname= NAME ( WS )? ':' ( WS )? )? ( ( 'insert' ) | ( 'delete' ) ) WS pname= NAME ( WS )? '(' args ')' ( WS )? '{' rules '}' )
			// src/aofDot/AspectParser/AODot.g:45:5: ( 'advice' WS aname= NAME ( WS )? ':' ( WS )? )? ( ( 'insert' ) | ( 'delete' ) ) WS pname= NAME ( WS )? '(' args ')' ( WS )? '{' rules '}'
			{
			// src/aofDot/AspectParser/AODot.g:45:5: ( 'advice' WS aname= NAME ( WS )? ':' ( WS )? )?
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==23) ) {
				alt10=1;
			}
			switch (alt10) {
				case 1 :
					// src/aofDot/AspectParser/AODot.g:45:6: 'advice' WS aname= NAME ( WS )? ':' ( WS )?
					{
					match(input,23,FOLLOW_23_in_advice152); 
					match(input,WS,FOLLOW_WS_in_advice154); 
					aname=(Token)match(input,NAME,FOLLOW_NAME_in_advice160); 
					// src/aofDot/AspectParser/AODot.g:45:31: ( WS )?
					int alt8=2;
					int LA8_0 = input.LA(1);
					if ( (LA8_0==WS) ) {
						alt8=1;
					}
					switch (alt8) {
						case 1 :
							// src/aofDot/AspectParser/AODot.g:45:31: WS
							{
							match(input,WS,FOLLOW_WS_in_advice162); 
							}
							break;

					}

					match(input,15,FOLLOW_15_in_advice165); 
					// src/aofDot/AspectParser/AODot.g:45:39: ( WS )?
					int alt9=2;
					int LA9_0 = input.LA(1);
					if ( (LA9_0==WS) ) {
						alt9=1;
					}
					switch (alt9) {
						case 1 :
							// src/aofDot/AspectParser/AODot.g:45:39: WS
							{
							match(input,WS,FOLLOW_WS_in_advice167); 
							}
							break;

					}

					}
					break;

			}

			Action action = null;
			// src/aofDot/AspectParser/AODot.g:47:5: ( ( 'insert' ) | ( 'delete' ) )
			int alt11=2;
			int LA11_0 = input.LA(1);
			if ( (LA11_0==27) ) {
				alt11=1;
			}
			else if ( (LA11_0==24) ) {
				alt11=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 11, 0, input);
				throw nvae;
			}

			switch (alt11) {
				case 1 :
					// src/aofDot/AspectParser/AODot.g:47:7: ( 'insert' )
					{
					// src/aofDot/AspectParser/AODot.g:47:7: ( 'insert' )
					// src/aofDot/AspectParser/AODot.g:47:8: 'insert'
					{
					match(input,27,FOLLOW_27_in_advice186); 
					action = Action.INSERT;
					}

					}
					break;
				case 2 :
					// src/aofDot/AspectParser/AODot.g:48:7: ( 'delete' )
					{
					// src/aofDot/AspectParser/AODot.g:48:7: ( 'delete' )
					// src/aofDot/AspectParser/AODot.g:48:8: 'delete'
					{
					match(input,24,FOLLOW_24_in_advice199); 
					action = Action.DELETE;
					}

					}
					break;

			}

			match(input,WS,FOLLOW_WS_in_advice215); 
			pname=(Token)match(input,NAME,FOLLOW_NAME_in_advice221); 
			// src/aofDot/AspectParser/AODot.g:50:21: ( WS )?
			int alt12=2;
			int LA12_0 = input.LA(1);
			if ( (LA12_0==WS) ) {
				alt12=1;
			}
			switch (alt12) {
				case 1 :
					// src/aofDot/AspectParser/AODot.g:50:21: WS
					{
					match(input,WS,FOLLOW_WS_in_advice223); 
					}
					break;

			}

			match(input,8,FOLLOW_8_in_advice226); 
			pushFollow(FOLLOW_args_in_advice228);
			args1=args();
			state._fsp--;

			match(input,9,FOLLOW_9_in_advice230); 
			// src/aofDot/AspectParser/AODot.g:50:38: ( WS )?
			int alt13=2;
			int LA13_0 = input.LA(1);
			if ( (LA13_0==WS) ) {
				alt13=1;
			}
			switch (alt13) {
				case 1 :
					// src/aofDot/AspectParser/AODot.g:50:38: WS
					{
					match(input,WS,FOLLOW_WS_in_advice232); 
					}
					break;

			}

			match(input,31,FOLLOW_31_in_advice235); 
			pushFollow(FOLLOW_rules_in_advice237);
			rules2=rules();
			state._fsp--;

			match(input,32,FOLLOW_32_in_advice239); 

			      String advicename;
			      if (aname == null) {
			        advicename = "UnnamedAdvice_" + counter;
			        counter++;
			      } else {
			        advicename = "_" + aname.getText();
			      }
			      
			      DotAdvice dotAd = new DotAdvice(advicename, args1, action, rules2);
			      Weaver.addAdvice(dotAd, pname.getText());
			    
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "advice"



	// $ANTLR start "pointcut"
	// src/aofDot/AspectParser/AODot.g:65:1: pointcut : 'pointcut' WS pname= NAME ( WS )? '(' args ')' ( WS )? '{' rules '}' ;
	public final void pointcut() throws RecognitionException {
		Token pname=null;
		ArrayList<Argument> args3 =null;
		ArrayList<PointcutRule> rules4 =null;

		try {
			// src/aofDot/AspectParser/AODot.g:66:3: ( 'pointcut' WS pname= NAME ( WS )? '(' args ')' ( WS )? '{' rules '}' )
			// src/aofDot/AspectParser/AODot.g:66:5: 'pointcut' WS pname= NAME ( WS )? '(' args ')' ( WS )? '{' rules '}'
			{
			match(input,29,FOLLOW_29_in_pointcut259); 
			match(input,WS,FOLLOW_WS_in_pointcut261); 
			pname=(Token)match(input,NAME,FOLLOW_NAME_in_pointcut267); 
			// src/aofDot/AspectParser/AODot.g:66:32: ( WS )?
			int alt14=2;
			int LA14_0 = input.LA(1);
			if ( (LA14_0==WS) ) {
				alt14=1;
			}
			switch (alt14) {
				case 1 :
					// src/aofDot/AspectParser/AODot.g:66:32: WS
					{
					match(input,WS,FOLLOW_WS_in_pointcut269); 
					}
					break;

			}

			match(input,8,FOLLOW_8_in_pointcut272); 
			pushFollow(FOLLOW_args_in_pointcut274);
			args3=args();
			state._fsp--;

			match(input,9,FOLLOW_9_in_pointcut276); 
			// src/aofDot/AspectParser/AODot.g:66:49: ( WS )?
			int alt15=2;
			int LA15_0 = input.LA(1);
			if ( (LA15_0==WS) ) {
				alt15=1;
			}
			switch (alt15) {
				case 1 :
					// src/aofDot/AspectParser/AODot.g:66:49: WS
					{
					match(input,WS,FOLLOW_WS_in_pointcut278); 
					}
					break;

			}

			match(input,31,FOLLOW_31_in_pointcut281); 
			pushFollow(FOLLOW_rules_in_pointcut283);
			rules4=rules();
			state._fsp--;

			match(input,32,FOLLOW_32_in_pointcut285); 

			     
			      Pointcut pc = new Pointcut(pname.getText(), args3, rules4);
			      Weaver.addPointcut(pc);
			    
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "pointcut"



	// $ANTLR start "args"
	// src/aofDot/AspectParser/AODot.g:73:1: args returns [ArrayList<Argument> args = new ArrayList<Argument>()] : ( ( WS )? t= type WS n= NAME ( ( WS )? ',' ( WS )? t= type WS n= NAME )* ( WS )? )? ;
	public final ArrayList<Argument> args() throws RecognitionException {
		ArrayList<Argument> args =  new ArrayList<Argument>();


		Token n=null;
		String t =null;

		try {
			// src/aofDot/AspectParser/AODot.g:74:3: ( ( ( WS )? t= type WS n= NAME ( ( WS )? ',' ( WS )? t= type WS n= NAME )* ( WS )? )? )
			// src/aofDot/AspectParser/AODot.g:74:5: ( ( WS )? t= type WS n= NAME ( ( WS )? ',' ( WS )? t= type WS n= NAME )* ( WS )? )?
			{
			// src/aofDot/AspectParser/AODot.g:74:5: ( ( WS )? t= type WS n= NAME ( ( WS )? ',' ( WS )? t= type WS n= NAME )* ( WS )? )?
			int alt21=2;
			int LA21_0 = input.LA(1);
			if ( (LA21_0==WS||(LA21_0 >= 18 && LA21_0 <= 20)) ) {
				alt21=1;
			}
			switch (alt21) {
				case 1 :
					// src/aofDot/AspectParser/AODot.g:74:6: ( WS )? t= type WS n= NAME ( ( WS )? ',' ( WS )? t= type WS n= NAME )* ( WS )?
					{
					// src/aofDot/AspectParser/AODot.g:74:6: ( WS )?
					int alt16=2;
					int LA16_0 = input.LA(1);
					if ( (LA16_0==WS) ) {
						alt16=1;
					}
					switch (alt16) {
						case 1 :
							// src/aofDot/AspectParser/AODot.g:74:6: WS
							{
							match(input,WS,FOLLOW_WS_in_args307); 
							}
							break;

					}

					pushFollow(FOLLOW_type_in_args314);
					t=type();
					state._fsp--;

					match(input,WS,FOLLOW_WS_in_args316); 
					n=(Token)match(input,NAME,FOLLOW_NAME_in_args322); 
					args.add(new Argument(n.getText(), new Value(t)));
					// src/aofDot/AspectParser/AODot.g:75:7: ( ( WS )? ',' ( WS )? t= type WS n= NAME )*
					loop19:
					while (true) {
						int alt19=2;
						int LA19_0 = input.LA(1);
						if ( (LA19_0==WS) ) {
							int LA19_1 = input.LA(2);
							if ( (LA19_1==10) ) {
								alt19=1;
							}

						}
						else if ( (LA19_0==10) ) {
							alt19=1;
						}

						switch (alt19) {
						case 1 :
							// src/aofDot/AspectParser/AODot.g:75:8: ( WS )? ',' ( WS )? t= type WS n= NAME
							{
							// src/aofDot/AspectParser/AODot.g:75:8: ( WS )?
							int alt17=2;
							int LA17_0 = input.LA(1);
							if ( (LA17_0==WS) ) {
								alt17=1;
							}
							switch (alt17) {
								case 1 :
									// src/aofDot/AspectParser/AODot.g:75:8: WS
									{
									match(input,WS,FOLLOW_WS_in_args333); 
									}
									break;

							}

							match(input,10,FOLLOW_10_in_args336); 
							// src/aofDot/AspectParser/AODot.g:75:16: ( WS )?
							int alt18=2;
							int LA18_0 = input.LA(1);
							if ( (LA18_0==WS) ) {
								alt18=1;
							}
							switch (alt18) {
								case 1 :
									// src/aofDot/AspectParser/AODot.g:75:16: WS
									{
									match(input,WS,FOLLOW_WS_in_args338); 
									}
									break;

							}

							pushFollow(FOLLOW_type_in_args345);
							t=type();
							state._fsp--;

							match(input,WS,FOLLOW_WS_in_args347); 
							n=(Token)match(input,NAME,FOLLOW_NAME_in_args353); 
							args.add(new Argument(n.getText(), new Value(t)));
							}
							break;

						default :
							break loop19;
						}
					}

					// src/aofDot/AspectParser/AODot.g:77:5: ( WS )?
					int alt20=2;
					int LA20_0 = input.LA(1);
					if ( (LA20_0==WS) ) {
						alt20=1;
					}
					switch (alt20) {
						case 1 :
							// src/aofDot/AspectParser/AODot.g:77:5: WS
							{
							match(input,WS,FOLLOW_WS_in_args370); 
							}
							break;

					}

					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return args;
	}
	// $ANTLR end "args"



	// $ANTLR start "rules"
	// src/aofDot/AspectParser/AODot.g:80:1: rules returns [ArrayList<PointcutRule> pcs = new ArrayList<PointcutRule>()] : ( WS | ( graph ) | ( node ';' ) | ( edge ';' ) )* ;
	public final ArrayList<PointcutRule> rules() throws RecognitionException {
		ArrayList<PointcutRule> pcs =  new ArrayList<PointcutRule>();


		GraphPointcutRule graph5 =null;
		NodePointcutRule node6 =null;
		EdgePointcutRule edge7 =null;

		try {
			// src/aofDot/AspectParser/AODot.g:81:3: ( ( WS | ( graph ) | ( node ';' ) | ( edge ';' ) )* )
			// src/aofDot/AspectParser/AODot.g:81:5: ( WS | ( graph ) | ( node ';' ) | ( edge ';' ) )*
			{
			// src/aofDot/AspectParser/AODot.g:81:5: ( WS | ( graph ) | ( node ';' ) | ( edge ';' ) )*
			loop22:
			while (true) {
				int alt22=5;
				switch ( input.LA(1) ) {
				case WS:
					{
					alt22=1;
					}
					break;
				case 14:
				case 25:
				case 26:
				case 30:
					{
					alt22=2;
					}
					break;
				case NAME:
					{
					switch ( input.LA(2) ) {
					case WS:
						{
						int LA22_7 = input.LA(3);
						if ( (LA22_7==17) ) {
							switch ( input.LA(4) ) {
							case WS:
								{
								int LA22_9 = input.LA(5);
								if ( (LA22_9==NAME||LA22_9==13) ) {
									alt22=3;
								}
								else if ( (LA22_9==8) ) {
									alt22=4;
								}

								}
								break;
							case NAME:
							case 13:
								{
								alt22=3;
								}
								break;
							case 8:
								{
								alt22=4;
								}
								break;
							}
						}
						else if ( (LA22_7==21) ) {
							alt22=3;
						}

						}
						break;
					case 17:
						{
						switch ( input.LA(3) ) {
						case WS:
							{
							int LA22_9 = input.LA(4);
							if ( (LA22_9==NAME||LA22_9==13) ) {
								alt22=3;
							}
							else if ( (LA22_9==8) ) {
								alt22=4;
							}

							}
							break;
						case NAME:
						case 13:
							{
							alt22=3;
							}
							break;
						case 8:
							{
							alt22=4;
							}
							break;
						}
						}
						break;
					case 16:
					case 21:
						{
						alt22=3;
						}
						break;
					}
					}
					break;
				case 13:
					{
					alt22=3;
					}
					break;
				case 8:
					{
					alt22=4;
					}
					break;
				}
				switch (alt22) {
				case 1 :
					// src/aofDot/AspectParser/AODot.g:81:6: WS
					{
					match(input,WS,FOLLOW_WS_in_rules391); 
					}
					break;
				case 2 :
					// src/aofDot/AspectParser/AODot.g:82:7: ( graph )
					{
					// src/aofDot/AspectParser/AODot.g:82:7: ( graph )
					// src/aofDot/AspectParser/AODot.g:82:8: graph
					{
					pushFollow(FOLLOW_graph_in_rules400);
					graph5=graph();
					state._fsp--;

					pcs.add(graph5);
					}

					}
					break;
				case 3 :
					// src/aofDot/AspectParser/AODot.g:83:7: ( node ';' )
					{
					// src/aofDot/AspectParser/AODot.g:83:7: ( node ';' )
					// src/aofDot/AspectParser/AODot.g:83:8: node ';'
					{
					pushFollow(FOLLOW_node_in_rules412);
					node6=node();
					state._fsp--;

					pcs.add(node6);
					match(input,16,FOLLOW_16_in_rules416); 
					}

					}
					break;
				case 4 :
					// src/aofDot/AspectParser/AODot.g:84:7: ( edge ';' )
					{
					// src/aofDot/AspectParser/AODot.g:84:7: ( edge ';' )
					// src/aofDot/AspectParser/AODot.g:84:8: edge ';'
					{
					pushFollow(FOLLOW_edge_in_rules426);
					edge7=edge();
					state._fsp--;

					pcs.add(edge7);
					match(input,16,FOLLOW_16_in_rules430); 
					}

					}
					break;

				default :
					break loop22;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return pcs;
	}
	// $ANTLR end "rules"



	// $ANTLR start "graph"
	// src/aofDot/AspectParser/AODot.g:87:1: graph returns [GraphPointcutRule pc] : ( '..graph' | 'graph' | 'digraph' | 'subgraph' ) WS n= ( NAME | '..' ) ( WS )? '{' rules '}' ;
	public final GraphPointcutRule graph() throws RecognitionException {
		GraphPointcutRule pc = null;


		Token n=null;
		ArrayList<PointcutRule> rules8 =null;

		try {
			// src/aofDot/AspectParser/AODot.g:88:3: ( ( '..graph' | 'graph' | 'digraph' | 'subgraph' ) WS n= ( NAME | '..' ) ( WS )? '{' rules '}' )
			// src/aofDot/AspectParser/AODot.g:88:5: ( '..graph' | 'graph' | 'digraph' | 'subgraph' ) WS n= ( NAME | '..' ) ( WS )? '{' rules '}'
			{
			if ( input.LA(1)==14||(input.LA(1) >= 25 && input.LA(1) <= 26)||input.LA(1)==30 ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			match(input,WS,FOLLOW_WS_in_graph468); 
			n=input.LT(1);
			if ( input.LA(1)==NAME||input.LA(1)==13 ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			// src/aofDot/AspectParser/AODot.g:88:73: ( WS )?
			int alt23=2;
			int LA23_0 = input.LA(1);
			if ( (LA23_0==WS) ) {
				alt23=1;
			}
			switch (alt23) {
				case 1 :
					// src/aofDot/AspectParser/AODot.g:88:73: WS
					{
					match(input,WS,FOLLOW_WS_in_graph482); 
					}
					break;

			}

			match(input,31,FOLLOW_31_in_graph485); 
			pushFollow(FOLLOW_rules_in_graph487);
			rules8=rules();
			state._fsp--;

			match(input,32,FOLLOW_32_in_graph489); 

			      pc = new GraphPointcutRule(n.getText(), rules8, new ArrayList<Argument>());
			    
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return pc;
	}
	// $ANTLR end "graph"



	// $ANTLR start "edge"
	// src/aofDot/AspectParser/AODot.g:94:1: edge returns [EdgePointcutRule pc] : ( NAME ( WS )? '=' ( WS )? )? '(' ( WS )? s= node ( WS )? ')' ( WS )? ( '->' | '--' ) ( WS )? '(' ( WS )? t= node ( WS )? ')' ( ( WS )? '[' attributes ']' )? ;
	public final EdgePointcutRule edge() throws RecognitionException {
		EdgePointcutRule pc = null;


		Token NAME10=null;
		NodePointcutRule s =null;
		NodePointcutRule t =null;
		ArrayList<Argument> attributes9 =null;

		try {
			// src/aofDot/AspectParser/AODot.g:95:3: ( ( NAME ( WS )? '=' ( WS )? )? '(' ( WS )? s= node ( WS )? ')' ( WS )? ( '->' | '--' ) ( WS )? '(' ( WS )? t= node ( WS )? ')' ( ( WS )? '[' attributes ']' )? )
			// src/aofDot/AspectParser/AODot.g:95:5: ( NAME ( WS )? '=' ( WS )? )? '(' ( WS )? s= node ( WS )? ')' ( WS )? ( '->' | '--' ) ( WS )? '(' ( WS )? t= node ( WS )? ')' ( ( WS )? '[' attributes ']' )?
			{

			      boolean directed = false;
			    
			// src/aofDot/AspectParser/AODot.g:98:5: ( NAME ( WS )? '=' ( WS )? )?
			int alt26=2;
			int LA26_0 = input.LA(1);
			if ( (LA26_0==NAME) ) {
				alt26=1;
			}
			switch (alt26) {
				case 1 :
					// src/aofDot/AspectParser/AODot.g:98:6: NAME ( WS )? '=' ( WS )?
					{
					NAME10=(Token)match(input,NAME,FOLLOW_NAME_in_edge521); 
					// src/aofDot/AspectParser/AODot.g:98:11: ( WS )?
					int alt24=2;
					int LA24_0 = input.LA(1);
					if ( (LA24_0==WS) ) {
						alt24=1;
					}
					switch (alt24) {
						case 1 :
							// src/aofDot/AspectParser/AODot.g:98:11: WS
							{
							match(input,WS,FOLLOW_WS_in_edge523); 
							}
							break;

					}
